Updated PaymentsDTO for POST call
