# payment/src/main/resources/static/openapi.yaml
@@ -6,7 +6,7 @@ paths:
   /api/payments:
     post:
       tags:
-        - payment
+        - paymentController
       operationId: createPayment
       summary: Create a new payment
       requestBody:
@@ -22,15 +22,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Payment created successfully!"
         '400':
           description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Webhook URL is empty for this clientId, please register a webhook"
         '500':
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Internal server error"
 
   /api/webhooks:
     post:
       tags:
-        - webhook
+        - webhookController
       operationId: registerWebhook
       summary: Register a new webhook URL
       requestBody:
@@ -46,10 +60,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Webhook registered successfully!"
         '400':
           description: Validation error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Validation error"
         '500':
           description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StringResponse'
+              example:
+                message: "Internal server error"
 components:
   schemas:
 
@@ -58,7 +86,6 @@ components:
       properties:
         message:
           type: string
-          example: "Operation completed successfully"
 
     PaymentRequest:
       type: object
@@ -87,7 +114,7 @@ components:
       properties:
         url:
           type: string
-          example: "http://localhost:8080/dummywebhook/receive"
+          example: "http://localhost:8080/mockWebhook/receive"
         clientId:
           type: string
           example: "client_123"
